--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<?php
-include("menu.php");
-?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; char=utf-8" />
 <title>Modularitas</title>
-<p>Ini adalah halaman index</p>
+</head>
+
+<body>
+<a href="menu.html">Home</a> |
+<a href="about.html">About Us</a> |
+<a href="link.html">Links</a> |
+<a href="contact.html">Contact</a> |
+<a href="new.html">NEW Menu</a> |
 </body>
 </html>
