--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <a href="link.html">Links</a> |
 <a href="contact.html">Contact</a> |
 <a href="new.html">NEW Menu</a> |
+<a href="variabel.html">Variabel</a> |
+<a href="operator.html">Operator</a>|
 </body>
 </html>
